--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -133,7 +133,7 @@
       </aside>
       <div class="page-content">
         <h1 class="title-category">
-          Laptop
+          Điện thoại - Realme
         </h1>
         <div class="product-filter-container">
           <div class="filter-list">
