--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -9,4 +9,213 @@
       </div>
     </div>
   </div>
+
+
+  <div class="container m-common">
+    <div class="sidebar-plus-content">
+      <aside class="page-sidebar">
+        <nav class="secondary-nav">
+          <ul id="menu-links" role="menubar">
+            <li class="list-group">
+              <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Laptop</strong>
+              <ul class="menu" role="menu">
+                <li class="item item-promotion">
+                  <a class="link " href="/en_us/women/new-arrivals/view-all.html" role="menuitem"
+                    data-tracking-label="view-all">
+                    Mac</a>
+                </li>
+                <li class="list-group item-promotion">
+                  <a class="link current" href="/en_us/women/new-arrivals/clothes.html" role="menuitem"
+                    data-tracking-label="clothes">
+                    HP</a>
+                  <ul class="menu" role="menu" style="display: none">
+                  </ul>
+                </li>
+                <li class="item item-promotion">
+                  <a class="link " href="/en_us/women/new-arrivals/shoes-accessories.html" role="menuitem"
+                    data-tracking-label="shoes-accessories">
+                    Dell</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/new-arrivals/beauty.html" role="menuitem"
+                    data-tracking-label="beauty">
+                    Asus</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/new-arrivals/underwear-nightwear.html" role="menuitem"
+                    data-tracking-label="underwear-nightwear">
+                     Lenovo</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-group">
+              <strong class="list-group-title " data-tracking-label="seasonal-trending">Điện thoại</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/holiday.html" role="menuitem"
+                    data-tracking-label="holiday">
+                    Iphone</a>
+                </li>
+                <li class="item item-promotion">
+                  <a class="link " href="/en_us/women/seasonal-trending/winter.html" role="menuitem"
+                    data-tracking-label="winter">
+                    Realme</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/trend-edit.html" role="menuitem"
+                    data-tracking-label="trend-concept">
+                    Oppo</a>
+                </li>
+                <li class="item item-promotion">
+                  <a class="link " href="/en_us/women/seasonal-trending/neutrals.html" role="menuitem"
+                    data-tracking-label="neutral">
+                    XSMax</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/y2k-fashion.html" role="menuitem"
+                    data-tracking-label="y2k">
+                    Samsung</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/seasonal-trending/autumn1.html" role="menuitem"
+                    data-tracking-label="autumn1">
+                    Nokia</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-group">
+              <strong class="list-group-title " data-tracking-label="deals">Đồ điện</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/deals/student-discount-get-15-off.html" role="menuitem"
+                    data-tracking-label="student-discount-get-15-off">
+                    Nồi cơm điện</a>
+                </li>
+                <li class="item item-promotion">
+                  <a class="link " href="/en_us/women/deals/sale-view-all.html" role="menuitem"
+                    data-tracking-label="sale-view-all">
+                    Lò vi sóng</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-group">
+              <strong class="list-group-title " data-tracking-label="gift-cards">Quà tặng</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/gift-cards/gift-card.html" role="menuitem"
+                    data-tracking-label="gift-card">
+                    Thẻ quà tặng</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/gift-cards/gift-guide.html" role="menuitem"
+                    data-tracking-label="gift-guide">
+                    Hướng dẫn</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-group">
+              <strong class="list-group-title " data-tracking-label="sustainability">Mở rộng</strong>
+              <ul class="menu" role="menu">
+                <li class="item">
+                  <a class="link " href="/en_us/women/sustainability/take-care.html" role="menuitem"
+                    data-tracking-label="take-care">
+                    Chăm sóc khách hàng</a>
+                </li>
+                <li class="item">
+                  <a class="link " href="/en_us/women/sustainability/learn-more.html" role="menuitem"
+                    data-tracking-label="learn-more">
+                    Tìm hiểu thêm</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </aside>
+      <div class="page-content">
+        <h1 class="title-category">
+          Laptop - DELL
+        </h1>
+        <div class="product-filter-container">
+          <div class="filter-list">
+            <!-- <i class="ai-settings-horizontal"></i> -->
+            <div class="btn-group">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Giá bán
+              </button>
+              <ul class="dropdown-menu">
+                <div class="price">
+                  <label for="price-from" class="form-label">Từ (VNĐ)</label>
+                  <input type="number" class="form-control" id="price-from">
+                </div>
+                <div class="price">
+                  <label for="price-to" class="form-label">Đến (VNĐ)</label>
+                  <input type="number" class="form-control" id="price-to">
+                </div>
+                <div class="price">
+                  <button class="form-control" style="background-color: #FB2E86; color: white;">Ok</button>
+                </div>
+              </ul>
+            </div>
+            <div class="sort-by">
+              <select class="form-select">
+                <option selected hidden>Lọc</option>
+                <option value="1">Giá giảm</option>
+                <option value="2">Giá tăng</option>
+                <option value="3">Three</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="list-card">
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+          <div class="item-style">
+            <app-property-card>
+            </app-property-card>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
