--- a/src/app/shares/components/property-card/property-card.component.html
+++ b/src/app/shares/components/property-card/property-card.component.html
@@ -14,7 +14,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- <div id="slideShowProduct" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -49,7 +49,10 @@
         <div class="bar-icon" style="background: #FFEAC1;"></div>
       </div>
       <p class="text-cost">
-        4.000 $
+        4.000 VNĐ
+      </p>
+      <p class="text-cost-km">
+        6.000 VNĐ
       </p>
     </div>
   </div>
