--- a/src/app/shares/components/property-card/property-card.component.scss
+++ b/src/app/shares/components/property-card/property-card.component.scss
@@ -68,6 +68,14 @@
 
 }
 
+p {
+  margin: 0px;
+}
+.text-cost-km {
+  text-decoration:line-through;
+  color: #FB2E86;
+}
+
 // .carousel-item, img {
 //   border-radius: 10px;
 // }
