--- a/src/app/theme/footer/footer.component.html
+++ b/src/app/theme/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="footer__app">
-  <div class="container">
+<footer>
+  <div class="container footer__app">
     <div class="row">
       <div class="col-lg-6">
         <a class="nav-link name__app" aria-current="page" href="#">CheemsStore</a>
@@ -36,6 +36,24 @@
         <p class="title__child__footer">Laptops & Computers</p>
         <p class="title__child__footer">Laptops & Computers</p>
         <p class="title__child__footer">Laptops & Computers</p>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="copy-right flex-50">
+        Copyright © 2022 CheemsStore's.
+      </div>
+      <div class="icon-contact flex-50">
+        <a href="">
+          <img src="./../../../assets/images/ic_facebook.svg" alt="">
+        </a>
+        <a href="">
+          <img src="./../../../assets/images/ic_twiter.svg" alt="">
+        </a>
+        <a href="">
+          <img src="./../../../assets/images/ic_instagram.svg" alt="">
+        </a>
       </div>
     </div>
   </div>
