--- a/src/assets/css/root-style.scss
+++ b/src/assets/css/root-style.scss
@@ -120,13 +120,24 @@ body {
   }
 }
 
+.background-color-1 {
+  background-color: #fb2e86;
+}
+.background-color-2 {
+  background-color: #101750;
+}
+.background-color-3 {
+  background-color: #f6f5ff;
+}
+
 .color-1 {
-  color: #101750;
+  color: #fb2e86;
 }
 
 .color-2 {
-  color: #fb2e86;
+  color: #151875;
 }
+
 
 .color-3 {
   color: #f6f5ff;
