--- a/src/app/pages/checkout/checkout.component.scss
+++ b/src/app/pages/checkout/checkout.component.scss
@@ -21,7 +21,6 @@
 
 .main-content {
   color: #151875;
-  box-shadow: 0px 0px 25px 10px #f5f5fc;
   border-radius: 10px;
   float: left;
   width: 100%;
@@ -46,7 +45,7 @@
 }
 
 .overview-sections > section:not(last-child) {
-  margin-bottom: 16px;
+  margin-bottom: 30px;
 }
 
 .mb-15 {
@@ -64,6 +63,7 @@
     background: #fff;
     border-bottom: 0;
     padding: 16px 24px;
+    box-shadow: 0px 0px 25px 10px #f5f5fc;
 
     .heading-style {
       margin-bottom: 16px;
@@ -109,8 +109,8 @@ form {
       position: relative;
 
       .input-style {
-        line-height: 24;
-        font-size: 16;
+        line-height: 24px;
+        font-size: 16px;
         font-weight: 400;
         text-transform: none;
         border: 1px solid;
@@ -174,6 +174,7 @@ form {
 
 .button-container {
   margin: 32px auto;
+  margin-bottom: 10px;
   width: 100%;
 }
 
@@ -230,3 +231,45 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
+
+
+.shipping-select {
+  margin-top: 12px;
+  position: relative;
+  width: 100%;
+  list-style-type: none;
+  li {
+    border-bottom: 1px solid #d0d0d0;
+
+    .button-non-border {
+      border: 0;
+      padding: 0;
+      position: static;
+      width: 100%;
+      background: inherit;
+      .item {
+        min-height: 96px;
+        display: flex;
+        align-items: stretch;
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+        min-height: inherit;
+        padding: 24px 32px 24px 0;
+      }
+    }
+  }
+}
+
+.li-selected {
+  background-color: #ffbcd9;
+  border-top: #fc3d90;
+  border-bottom: none;
+}
+
+.animtion-transition {
+  opacity: 1;
+  height: auto;
+  display: block;
+}
+
