--- a/src/app/theme/footer/footer.component.scss
+++ b/src/app/theme/footer/footer.component.scss
@@ -7,9 +7,10 @@
   margin-right: 60px;
   margin-bottom: 30px;
 }
-
-.footer__app {
+footer {
   background-color: #EEEFFB;
+}
+.footer__app {
   padding: 80px 40px;
 }
 
@@ -38,4 +39,41 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
+}
+
+.footer-bottom {
+  padding-top: 10px;
+  padding-bottom:10px;
+  background-color: #c8cbe7;
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    .flex-50 {
+      flex: 0 0 50%;
+      width: 50%;
+    }
+
+    .copy-right {
+      color:#393a41;
+    }
+
+    .icon-contact {
+      display: flex;
+      justify-content: center;
+
+      a {
+        border-radius: 50%;
+        text-decoration: none;
+        margin-left: 10px;
+        margin-right: 10px;
+        color: white;
+         i {
+          padding: 0;
+          margin: 0;
+         }
+      }
+    }
+  }
 }
