--- a/src/app/theme/footer/footer.component.html
+++ b/src/app/theme/footer/footer.component.html
@@ -46,13 +46,13 @@
       </div>
       <div class="icon-contact flex-50">
         <a href="">
-          <img src="./../../../assets/images/ic_facebook.svg" alt="">
+          <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic_facebook.svg" alt="">
         </a>
         <a href="">
-          <img src="./../../../assets/images/ic_twiter.svg" alt="">
+          <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic_twiter.svg" alt="">
         </a>
         <a href="">
-          <img src="./../../../assets/images/ic_instagram.svg" alt="">
+          <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic_instagram.svg" alt="">
         </a>
       </div>
     </div>
