feat and fix add some model (category, product, media,...) fix some UI and logic in property card change UI footer add carousel package

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="cc">
+<div class="home">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin-bottom: 30px;">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -86,7 +86,7 @@
       <div class="title">
         Các ứng dụng nổi bật
       </div>
-      <div class="list-card">
+      <!-- <div class="list-card">
         <div class="item-style">
           <app-property-card>
           </app-property-card>
@@ -104,7 +104,7 @@
           <app-property-card>
           </app-property-card>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
