--- a/src/app/theme/footer/footer.component.html
+++ b/src/app/theme/footer/footer.component.html
@@ -12,30 +12,30 @@
       </div>
       <div class="col-lg-2">
         <p class="title__footer">
-          Categories
+          Máy tính xách tay
         </p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Dell</p>
+        <p class="title__child__footer">Lenovo</p>
+        <p class="title__child__footer">Legion</p>
+        <p class="title__child__footer">Asus</p>
       </div>
       <div class="col-lg-2">
         <p class="title__footer">
-          Customer Care
+          Đồ điện tử
         </p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Nồi cơm điện</p>
+        <p class="title__child__footer">Quạt</p>
+        <p class="title__child__footer">Tủ lạnh</p>
+        <p class="title__child__footer">Lò vi sóng</p>
       </div>
       <div class="col-lg-2">
         <p class="title__footer">
-          Pages
+          Phụ kiện
         </p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
-        <p class="title__child__footer">Laptops & Computers</p>
+        <p class="title__child__footer">Chuột</p>
+        <p class="title__child__footer">Bàn phím</p>
+        <p class="title__child__footer">Tai nghe</p>
+        <p class="title__child__footer">CPU</p>
       </div>
     </div>
   </div>
@@ -45,13 +45,13 @@
         Copyright © 2022 CheemsStore's.
       </div>
       <div class="icon-contact flex-50">
-        <a href="">
+        <a href="https://www.facebook.com/dung.kunss.5">
           <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic_facebook.svg" alt="">
         </a>
-        <a href="">
+        <a href="https://www.instagram.com/dungpront2001/">
           <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic_twiter.svg" alt="">
         </a>
-        <a href="">
+        <a href="https://www.instagram.com/dungpront2001/">
           <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ic_instagram.svg" alt="">
         </a>
       </div>
